--- a/package.json
+++ b/package.json
@@ -38,16 +38,16 @@
       "version": "0.2.0"
     },
     {
-      "author": "why",
-      "hash": "QmZHU2gx42NPTYXzw6pJkuX6xCE7bKECp6e8QcPdoLx8sx",
-      "name": "protobuf",
-      "version": "3.6.0"
-    },
-    {
       "author": "magik6k",
       "hash": "QmRFFHk2jw9tgjxv12bCuuTnSbVXxEvYQkuNCLMEv9eUwP",
       "name": "go-farm",
       "version": "1.0.0"
+    },
+    {
+      "author": "GoGo",
+      "hash": "QmddjPSGZb3ieihSseFeCfVRpZzcqczPNsD2DvarSwnjJB",
+      "name": "gogo-protobuf",
+      "version": "1.2.1"
     }
   ],
   "gxVersion": "0.10.0",
